--- a/springboot2-jpa-crud-example/pom.xml
+++ b/springboot2-jpa-crud-example/pom.xml
@@ -65,6 +65,11 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<properties>
+ 	 <sonar.organization>akashgunj</sonar.organization>
+ 	 <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+	</properties>
 
 
 </project>
